Add completed score logic